--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-sass": "^2.2.0",
-    "gulp-autoprefixer": "^3.1.0"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-jade": "^1.1.0"
   },
   "scripts": {
     "postinstall": "bower install",
