--- a/package.json
+++ b/package.json
@@ -19,18 +19,15 @@
     "gulp": "~3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-sass": "^2.2.0",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-jade": "^1.1.0",
-    "gulp-gh-pages": "^0.5.4"
+    "gulp-sass": "^2.2.0",
+    "gulp-autoprefixer": "^3.1.0"
   },
   "scripts": {
     "postinstall": "bower install",
 
     "prestart": "npm install && gulp",
     "start": "http-server -a localhost -p 8000 -c-1",
-
-    "deploy": "git subtree push --prefix dist origin gh-pages",
 
     "pretest": "npm install && gulp",
     "test": "karma start tests/karma.conf.js",
